--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  flex-direction: column;
+  padding: 4%;
+}
+
+.imagem {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background-attachment: fixed;
+  filter: blur(10px);
+}
+.button1 {
+  background-color: #009999; /* Green */
+  border: none;
   color: white;
+  padding: 10px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 9%;
+
+  background-color: white;
+  color: black;
+  border: 2px solid #009999;
+}
+.texto {
+  color: azure;
 }
 
-.App-link {
-  color: #61dafb;
+.img {
+  height: calc(50% + 5vw);
+  width: calc(50% + 5vw);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media only screen and (max-width: 1700px) {
+  .img {
+    height: 78%;
+    width: 78%;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media only screen and (max-width: 1400px) {
+  .img {
+    height: 100%;
+    width: 100%;
   }
 }
